# Document-Redactor-Pro

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
resources/locales/: de.json  en.json  es.json  fr.json  it.json
src/: main.py
src/core/: __init__.py  file_manager.py  ner_engine.py  ocr_engine.py  pdf_processor.py  profile_manager.py  regex_detector.py  text_search.py
src/gui/: __init__.py  drop_zone.py  main_window.py  preview_widget.py  sidebar.py  theme.py
src/gui/widgets/: drop_zone.py  preview_widget.py  search_panel.py  sidebar.py  word_list_panel.py
src/utils/: __init__.py  config.py  i18n.py
