[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-document-redactor-pro"
version = "1.0.0"
description = "AI Document Redactor Pro - 100% Offline Document Redaction"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
